# project_echo

./: .env.example  .gitignore  README.md  SUBMISSION.md  agents.md  check_hf_token.py  download_models.sh  generate_figures.py  generate_videos.py  pyproject.toml  setup.sh  train.sh
checkpoints/: README.md  a4c_geo_calibration.json  psax_geo_calibration.json
checkpoints/regression_videomae_a4c/garden_temporal_a4c/: config.json  epoch_log.csv  training_history.json
checkpoints/regression_videomae_mlp_a4c/garden_mlp_a4c/: config.json  epoch_log.csv  training_history.json
checkpoints/regression_videomae_mlp_psax/garden_mlp_psax/: epoch_log.csv  training_history.json
checkpoints/regression_videomae_multitask_a4c/garden_multitask_a4c/: epoch_log.csv  training_history.json
checkpoints/regression_videomae_multitask_psax/garden_multitask_psax/: config.json  epoch_log.csv  training_history.json
checkpoints/regression_videomae_psax/garden_temporal_psax/: epoch_log.csv  training_history.json
checkpoints/regression_videomae_tcn_a4c/garden_tcn_a4c/: config.json  epoch_log.csv  training_history.json
checkpoints/regression_videomae_tcn_psax/garden_tcn_psax/: epoch_log.csv  training_history.json
data/: README.md
local_models/: README.md
src/: demo_api.py
src/demo_frontend/: index.html
src/echoguard/: __init__.py  confidence.py  config.py  dual_view.py  inference.py  video_utils.py  vlm_critic.py  zscore.py
src/echoguard/regression/: __init__.py  evaluate.py  evaluate_garden.py  extract_videomae.py  geometric_ef.py  infer.py  model.py  model_garden.py  train.py  (+1 more)
